[package]
name = "nmos_6502"
version = "0.1.1"
license = "MIT"
edition = "2024"
readme = "README.md"
description = "A NMOS 6502 CPU emulator (WIP)"
repository = "https://github.com/cainthebest/nmos_6502"
authors = ["cainthebest <https://github.com/cainthebest>"]
categories = ["no-std", "embedded", "emulators"]


[features]
default = []

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
